--- a/charts/results-multi.html
+++ b/charts/results-multi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -50,42 +50,42 @@
 
     <script type="text/javascript" src="script.js"></script>
     <script type="module">
-      import { populateTable, sortTable, populateHeatmap, createHeatmapSortButtons, fetchJSON } from "./helpers.js";
+      import { populateTable, sortTable, populateHeatmap, createHeatmapSortButtons, fetchJSON } from './helpers.js'
 
       async function setup() {
         // Find if Multi Symbol
-        const multiData = await fetchJSON("http://localhost:8000/results-stats-multi.json");
-        const multiSymbol = multiData.generalData[4].value.length !== 1;
-        const permutationCount = multiData.generalData[3].value;
+        const multiData = await fetchJSON('http://localhost:8000/results-stats-multi.json')
+        const multiSymbol = multiData.generalData[4].value.length !== 1
+        const permutationCount = multiData.generalData[3].value
 
-        let shouldShow = true;
-        if (multiSymbol && permutationCount === multiData.generalData[4].value.length) shouldShow = false;
+        let shouldShow = true
+        if (multiSymbol && permutationCount === multiData.generalData[4].value.length) shouldShow = false
 
         // Initial population of tables and heatmap
-        await populateTable("http://localhost:8000/results-stats-multi.json", "general-table", "generalData");
-        await populateTable("http://localhost:8000/results-stats-multi.json", "total-amounts-table", "totals");
+        await populateTable('http://localhost:8000/results-stats-multi.json', 'general-table', 'generalData')
+        await populateTable('http://localhost:8000/results-stats-multi.json', 'total-amounts-table', 'totals')
         if (shouldShow)
           await populateTable(
-            "http://localhost:8000/results-stats-multi.json",
-            "asset-amount-percentages-table",
-            "assetAmountsPercentages"
-          );
-        await populateTable("http://localhost:8000/results-multi.json", "permutation-table", "multiResults");
-        if (shouldShow) await populateHeatmap();
-        if (shouldShow) await createHeatmapSortButtons();
+            'http://localhost:8000/results-stats-multi.json',
+            'asset-amount-percentages-table',
+            'assetAmountsPercentages'
+          )
+        await populateTable('http://localhost:8000/results-multi.json', 'permutation-table', 'multiResults')
+        if (shouldShow) await populateHeatmap()
+        if (shouldShow) await createHeatmapSortButtons()
 
         if (!shouldShow) {
-          document.getElementById("asset-stats-title").style.display = "none";
-          document.getElementById("asset-amount-percentages-table").style.display = "none";
-          document.getElementById("heatmap-title").style.display = "none";
+          document.getElementById('asset-stats-title').style.display = 'none'
+          document.getElementById('asset-amount-percentages-table').style.display = 'none'
+          document.getElementById('heatmap-title').style.display = 'none'
         }
 
-        document.getElementById("sortEndAmount").addEventListener("click", () => sortTable("endAmountUpdated"));
-        document.getElementById("sortSharpeRatio").addEventListener("click", () => sortTable("sharpeRatioUpdated"));
-        document.getElementById("sortMaxDrawdown").addEventListener("click", () => sortTable("maxDrawdown"));
+        document.getElementById('sortEndAmount').addEventListener('click', () => sortTable('endAmountUpdated'))
+        document.getElementById('sortSharpeRatio').addEventListener('click', () => sortTable('sharpeRatioUpdated'))
+        document.getElementById('sortMaxDrawdown').addEventListener('click', () => sortTable('maxDrawdown'))
       }
 
-      setup();
+      setup()
     </script>
   </body>
 </html>
